// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ampersand 1`] = `
[
  {
    "$nodeType": "rule",
    "nestedRules": [
      {
        "$nodeType": "rule",
        "nestedRules": [],
        "properties": [
          {
            "$nodeType": "property",
            "text": "color: red",
          },
        ],
        "selector": "&.inner1",
      },
    ],
    "properties": [
      {
        "$nodeType": "property",
        "text": "color: blue",
      },
    ],
    "selector": ".outer1, .outer2",
  },
]
`;

exports[`ampersand 2`] = `
[
  {
    "$nodeType": "rule",
    "nestedRules": [],
    "properties": [
      {
        "$nodeType": "property",
        "text": "color: blue",
      },
    ],
    "selector": ".outer1, .outer2",
  },
  {
    "$nodeType": "rule",
    "nestedRules": [],
    "properties": [
      {
        "$nodeType": "property",
        "text": "color: red",
      },
    ],
    "selector": ".outer1.inner1, .outer2.inner1",
  },
]
`;

exports[`ampersand 3`] = `
".outer1, .outer2 {
    color: blue;
}
.outer1.inner1, .outer2.inner1 {
    color: red;
}
"
`;

exports[`complex selectors 1`] = `
[
  {
    "$nodeType": "rule",
    "nestedRules": [
      {
        "$nodeType": "rule",
        "nestedRules": [],
        "properties": [
          {
            "$nodeType": "property",
            "text": "color: red",
          },
        ],
        "selector": ".inner1, .inner2",
      },
    ],
    "properties": [
      {
        "$nodeType": "property",
        "text": "color: blue",
      },
    ],
    "selector": ".outer1, .outer2",
  },
]
`;

exports[`complex selectors 2`] = `
[
  {
    "$nodeType": "rule",
    "nestedRules": [],
    "properties": [
      {
        "$nodeType": "property",
        "text": "color: blue",
      },
    ],
    "selector": ".outer1, .outer2",
  },
  {
    "$nodeType": "rule",
    "nestedRules": [],
    "properties": [
      {
        "$nodeType": "property",
        "text": "color: red",
      },
    ],
    "selector": ".outer1 .inner1, .outer1 .inner2, .outer2 .inner1, .outer2 .inner2",
  },
]
`;

exports[`complex selectors 3`] = `
".outer1, .outer2 {
    color: blue;
}
.outer1 .inner1, .outer1 .inner2, .outer2 .inner1, .outer2 .inner2 {
    color: red;
}
"
`;

exports[`test1 1`] = `
[
  {
    "$nodeType": "rule",
    "nestedRules": [
      {
        "$nodeType": "rule",
        "nestedRules": [],
        "properties": [
          {
            "$nodeType": "property",
            "text": "color: red",
          },
        ],
        "selector": ".inner1",
      },
    ],
    "properties": [],
    "selector": ".outer1",
  },
]
`;

exports[`test1 2`] = `
[
  {
    "$nodeType": "rule",
    "nestedRules": [],
    "properties": [
      {
        "$nodeType": "property",
        "text": "color: red",
      },
    ],
    "selector": ".outer1 .inner1",
  },
]
`;

exports[`test2 1`] = `
[
  {
    "$nodeType": "rule",
    "nestedRules": [
      {
        "$nodeType": "rule",
        "nestedRules": [],
        "properties": [
          {
            "$nodeType": "property",
            "text": "color: red",
          },
        ],
        "selector": ".inner1, .inner2",
      },
    ],
    "properties": [],
    "selector": ".outer1, .outer2",
  },
]
`;

exports[`test2 2`] = `
[
  {
    "$nodeType": "rule",
    "nestedRules": [],
    "properties": [
      {
        "$nodeType": "property",
        "text": "color: red",
      },
    ],
    "selector": ".outer1 .inner1, .outer1 .inner2, .outer2 .inner1, .outer2 .inner2",
  },
]
`;

exports[`test3 1`] = `
[
  {
    "$nodeType": "rule",
    "nestedRules": [
      {
        "$nodeType": "rule",
        "nestedRules": [],
        "properties": [
          {
            "$nodeType": "property",
            "text": "color: red",
          },
        ],
        "selector": ".inner1, .inner2",
      },
    ],
    "properties": [
      {
        "$nodeType": "property",
        "text": "color: blue",
      },
    ],
    "selector": ".outer1, .outer2",
  },
]
`;

exports[`test3 2`] = `
[
  {
    "$nodeType": "rule",
    "nestedRules": [],
    "properties": [
      {
        "$nodeType": "property",
        "text": "color: blue",
      },
    ],
    "selector": ".outer1, .outer2",
  },
  {
    "$nodeType": "rule",
    "nestedRules": [],
    "properties": [
      {
        "$nodeType": "property",
        "text": "color: red",
      },
    ],
    "selector": ".outer1 .inner1, .outer1 .inner2, .outer2 .inner1, .outer2 .inner2",
  },
]
`;

exports[`test3 3`] = `
".outer1, .outer2 {
    color: blue;
}
.outer1 .inner1, .outer1 .inner2, .outer2 .inner1, .outer2 .inner2 {
    color: red;
}
"
`;
